# splayer

./: .clang-format  CMakeLists.txt
cmake/: CompilerWarnings.cmake
src/: CMakeLists.txt  main.cpp  window.h
src/splayer/: CMakeLists.txt  cfg.h  pf_wrapper.h  splayer.cpp  splayer.h  to_file.h
src/splayer/codec/: CMakeLists.txt  codec.cpp  codec.h
src/splayer/codec/decode/: CMakeLists.txt  decoder.cpp  decoder.h  hw_decode.cpp  hw_decode.h  sw_fallback.cpp  sw_fallback.h
src/splayer/display/: CMakeLists.txt  gl_texture.cpp  gl_texture.h
src/splayer/util/: CMakeLists.txt  log.h  pf_wrapper.cpp  str_utils.h  utils.h
src/splayer/window/: CMakeLists.txt  window.cpp  window.h
